--- a/index.html
+++ b/index.html
@@ -8,33 +8,88 @@
 </head>
 <body>
     <div class="sidebar">
-        <div id="side-home">Dashboard</div>
-        <div id="side-navi">
-            <ul class="navi">
-                <li><img src="" alt="" class="icon"><span>Home</span></li>
-                <li><img src="" alt="" class="icon"><span>Profile</span></li>
-                <li><img src="" alt="" class="icon"><span>Messages</span></li>
-                <li><img src="" alt="" class="icon"><span>History</span></li>
-                <li><img src="" alt="" class="icon"><span>Tasks</span></li>
-                <li><img src="" alt="" class="icon"><span>Community</span></li>
+        <h1>Dashboard</h1>
+        <nav class="menu">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Profile</a></li>
+                <li><a href="#">Messages</a></li>
+                <li><a href="#">History</a></li>
+                <li><a href="#">Tasks</a></li>
+                <li><a href="#">Community</a></li>
             </ul>
-        </div>
-        <div id="side-support">
-            <ul class="support">
-                <li><img src="" alt="" class="icon"><span>Settings</span></li>
-                <li><img src="" alt="" class="icon"><span>Support</span></li>
-                <li><img src="" alt="" class="icon"><span>Privacy</span></li>
+            <ul>
+                <li><a href="#">Settings</a></li>
+                <li><a href="#">Support</a></li>
+                <li><a href="#">Privacy</a></li>
             </ul>
-        </div>
+        </nav>
     </div>
     <div class="header">
-        <div id="head-search"></div>
-        <div id="head-profile"></div>
+        <div class=header-element id="head-search">
+            <div class="search-bar"><img src="" alt="" class="icon"><input type="search" name="" id=""></div>
+            <div class="profile-icon"><img src="" alt="" class="icon"><img src="" alt="" class="profile-pic">Annie</div>
+        </div>
+        <div class=header-element id="head-profile">
+            <div class="profile">
+                <img src="" alt="" class="head-pic">
+                <h2>annie(@annieline)</h2>
+            </div>
+            <div class="button-list">
+                <button class="action">New</button>
+                <button class="action">Upload</button>
+                <button class="action">Share</button>
+            </div>
+        </div>
     </div>
     <div class="main-content">
-        <div id="main-posts"></div>
-        <div class="main-side" id="main-announcements"></div>
-        <div class="main-side" id="main-trending"></div>
+        <div class="main-posts">
+            <h3>Projects</h3>
+            <div class="card-container">
+                <div class="card">
+                    <h4>project</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Suscipit tellus mauris a diam maecenas sed enim ut sem. Magna ac placerat vestibulum lectus mauris ultrices. Leo in vitae turpis massa sed elementum tempus egestas. Odio euismod lacinia at quis risus sed.</p>
+                    <div class="btn-bar"><button class="star"></button><button class="watch"></button><button class="share"></button></div>
+                </div>
+                <div class="card">
+                    <h4>project</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Suscipit tellus mauris a diam maecenas sed enim ut sem. Magna ac placerat vestibulum lectus mauris ultrices. Leo in vitae turpis massa sed elementum tempus egestas. Odio euismod lacinia at quis risus sed.</p>
+                    <div class="btn-bar"><button class="star"></button><button class="watch"></button><button class="share"></button></div>
+                </div>
+                <div class="card">
+                    <h4>project</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Suscipit tellus mauris a diam maecenas sed enim ut sem. Magna ac placerat vestibulum lectus mauris ultrices. Leo in vitae turpis massa sed elementum tempus egestas. Odio euismod lacinia at quis risus sed.</p>
+                    <div class="btn-bar"><button class="star"></button><button class="watch"></button><button class="share"></button></div>
+                </div>
+                <div class="card">
+                    <h4>project</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Suscipit tellus mauris a diam maecenas sed enim ut sem. Magna ac placerat vestibulum lectus mauris ultrices. Leo in vitae turpis massa sed elementum tempus egestas. Odio euismod lacinia at quis risus sed.</p>
+                    <div class="btn-bar"><button class="star"></button><button class="watch"></button><button class="share"></button></div>
+                </div>
+                <div class="card">
+                    <h4>project</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Suscipit tellus mauris a diam maecenas sed enim ut sem. Magna ac placerat vestibulum lectus mauris ultrices. Leo in vitae turpis massa sed elementum tempus egestas. Odio euismod lacinia at quis risus sed.</p>
+                    <div class="btn-bar"><button class="star"></button><button class="watch"></button><button class="share"></button></div>
+                </div>
+                <div class="card">
+                    <h4>project</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Suscipit tellus mauris a diam maecenas sed enim ut sem. Magna ac placerat vestibulum lectus mauris ultrices. Leo in vitae turpis massa sed elementum tempus egestas. Odio euismod lacinia at quis risus sed.</p>
+                    <div class="btn-bar"><button class="star"></button><button class="watch"></button><button class="share"></button></div>
+                </div>
+            </div>
+        </div>
+        <div class="main-side">
+            <div class="sides" id="main-announcements">
+                <h3>Annoucements</h3>
+                <div class="newsfeed">
+                </div>
+            </div>
+            <div class="sides" id="main-trending">
+                <h3>Trending</h3>
+                <div class="pro-trending">
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
