added main content panel and added svgs for iconography

--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
             </div>
         </div>
         <div class="main-side">
-            <div class="sides" id="main-announcements">
+            <div id="main-announcements">
                 <h3>Annoucements</h3>
-                <div class="newsfeed">
+                <div class="sides" id="newsfeed">
                 </div>
             </div>
-            <div class="sides" id="main-trending">
+            <div id="main-trending">
                 <h3>Trending</h3>
-                <div class="pro-trending">
+                <div class="sides" id="trending">
                 </div>
             </div>
         </div>
